--- a/packages/storybook-html/stories/layout/layout-demo.scss
+++ b/packages/storybook-html/stories/layout/layout-demo.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @use "@uqds/core/src/scss/_global" as core;
 
 .uqds-layout-demo-bg {
@@ -16,17 +17,17 @@
   & .uq-card-grid {
     background: repeating-linear-gradient(
       45deg,
-      lighten(core.$green, 30%),
-      lighten(core.$uq-green, 30%) 10px,
-      lighten(core.$uq-green, 35%) 10px,
-      lighten(core.$uq-green, 35%) 20px
+      color.adjust(core.$green, $lightness: 30%),
+      color.adjust(core.$uq-green, $lightness: 30%) 10px,
+      color.adjust(core.$uq-green, $lightness: 35%) 10px,
+      color.adjust(core.$uq-green, $lightness: 35%) 20px
     );
   }
 }
 
 .uqds-layout-demo-card,
 .uqds-layout-demo-el {
-  background-color: lighten(core.$uq-blue, 40%);
+  background-color: color.adjust(core.$uq-blue, $lightness: 40%);
   border: 1px solid core.$uq-blue;
   height: 220px;
 }
