--- a/packages/icon/src/scss/_global.scss
+++ b/packages/icon/src/scss/_global.scss
@@ -5,7 +5,7 @@
 @use "@uqds/core/src/scss/global" as core;
 @use "_build/icons" as *;
 
-$colourPlaceholder: "~~COLOR~~";
+$colour-placeholder: "~~COLOR~~";
 
 $icon-primary-filter: core.$filter-primary;
 $icon-light-filter: core.$filter-white;
@@ -75,8 +75,8 @@ $icon-text-filter: core.$filter-text;
     // Since we're inserting the colour into a data URI (which is made up
     // of URL-escaped SVG), we need to make sure the incoming value is
     // already escaped.
-    $escapedColor: -str-replace("" + $color, "#", "%23");
-    $data-uri: -str-replace($icon, $colourPlaceholder, $escapedColor);
+    $escaped-color: -str-replace("" + $color, "#", "%23");
+    $data-uri: -str-replace($icon, $colour-placeholder, $escaped-color);
 
     @return $data-uri;
   }
