--- a/packages/grid/src/scss/_global.scss
+++ b/packages/grid/src/scss/_global.scss
@@ -1,5 +1,6 @@
 @use "sass:math";
 @use "sass:list";
+@use "sass:map";
 @use "@uqds/core/src/scss/global" as core;
 
 // Grid schema
@@ -22,15 +23,15 @@ $schema: (
   ),
 ) !default;
 
-$schema-base: map-get(
+$schema-base: map.get(
   $map: $schema,
   $key: "base",
 ) !default;
-$schema-md: map-get(
+$schema-md: map.get(
   $map: $schema,
   $key: "md",
 ) !default;
-$schema-xl: map-get(
+$schema-xl: map.get(
   $map: $schema,
   $key: "xl",
 ) !default;
