fix: updated styles and examples

--- a/packages/uqds-builder/src/scss/main.scss
+++ b/packages/uqds-builder/src/scss/main.scss
@@ -8,6 +8,7 @@
 // Customise Components
 
 @use "@uqds/accordion/src/scss/main" as accordion;
+@use "@uqds/acknowledgement/src/scss/main" as acknowledgement;
 @use "@uqds/alert/src/scss/main" as alert;
 @use "@uqds/blockquote/src/scss/main" as blockquote;
 @use "@uqds/breadcrumb/src/scss/main" as breadcrumb;
