--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -1,6 +1,6 @@
 @use "@uqds/core/src/scss/global" as core;
 @use "@uqds/icon/src/scss/global" as icon;
-@import "global";
+@use "global";
 
 .uq-breadcrumbs {
   border-bottom: 1px solid #e2e2e2;
