--- a/packages/storybook-html/stories/deprecated/footer-legacy/footer.scss
+++ b/packages/storybook-html/stories/deprecated/footer-legacy/footer.scss
@@ -1,1 +1,1 @@
-@import "../../../../../node_modules/@uqds/footer-legacy/src/scss/component";
+@use "../../../../../node_modules/@uqds/footer-legacy/src/scss/component";
