--- a/packages/app-maps/src/scss/_icons.scss
+++ b/packages/app-maps/src/scss/_icons.scss
@@ -1,3 +1,5 @@
+@use "sass:meta";
+@use "sass:string";
 @use "sass:map";
 $-icons: (
   "logo--uq-shield":
@@ -27,12 +29,12 @@ $-icons: (
 );
 
 @function -str-replace($string, $search, $replace: "") {
-  $index: str-index($string, $search);
+  $index: string.index($string, $search);
 
   @if $index {
-    @return str-slice($string, 1, $index - 1) + $replace +
+    @return string.slice($string, 1, $index - 1) + $replace +
       -str-replace(
-        str-slice($string, $index + str-length($search)),
+        string.slice($string, $index + string.length($search)),
         $search,
         $replace
       );
@@ -42,7 +44,7 @@ $-icons: (
 }
 
 @function get-icon($icon, $color: #51247a) {
-  @if type-of($color) != "color" and $color != "none" {
+  @if meta.type-of($color) != "color" and $color != "none" {
     @warn "The requested color - \"" + $color + "\" - was not recognized as a Sass color value.";
     @return null;
   }
