--- a/packages/storybook-html/stories/components/core/_space.scss
+++ b/packages/storybook-html/stories/components/core/_space.scss
@@ -1,7 +1,9 @@
+@use "@uqds/core/src/scss/_partials/colour-constants";
+
 @use "@uqds/core/src/scss/global" as *;
 
 .uqds-space {
-  background-color: rgba($black, 0.75);
+  background-color: rgba(colour-constants.$black, 0.75);
   width: $space-m;
   height: $space-m;
 }
@@ -73,7 +75,7 @@
 
 /* Container example */
 .uqds-container {
-  background-color: rgba($black, 0.75);
+  background-color: rgba(colour-constants.$black, 0.75);
   display: inline-block;
 }
 
