--- a/packages/react/src/jsx/components/Alert/styles.module.scss
+++ b/packages/react/src/jsx/components/Alert/styles.module.scss
@@ -1,3 +1,3 @@
 @use "@uqds/alert/src/scss/main.scss" as alert;
-@use "@uqds/body/src/scss/main.scss" as layout;
+@use "@uqds/body/src/scss/main.scss" as body;
 @use "@uqds/icon/src/scss/main.scss" as icon;
