fix: updated social media references

--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -267,7 +267,7 @@
       ));
     }
 
-    /* Linkedin icon */
+    /* LinkedIn icon */
     &--linkedin::before {
       background-image: url(icon-constants.get-icon(
         "social--social-linkedin-circle",
