added DD tag version

--- a/packages/storybook-html/stories/components/footer/footer.html
+++ b/packages/storybook-html/stories/components/footer/footer.html
@@ -218,6 +218,7 @@
       <ul  class="uq-footer__footer-list">
         <li class="uq-footer__footer-item">&copy; The University of Queensland</li>
         <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 </li>
+        <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: <dd>63 942 912 684</dd></li>
         <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: <a class="uq-footer__link" href="https://abr.business.gov.au/ABN/View?id=63942912684" rel="external" data-gtm-label="ABN">63 942 912 684</a> </li>
         <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr>: <a class="uq-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" data-gtm-label="CRICOS 00025B">00025B</a></li>
         <li class="uq-footer__footer-item"><abbr title="Tertiary Education Quality and Standards Agency">TEQSA</abbr>: <a class="uq-footer__link" href="https://www.uq.edu.au/about/teqsa-link" rel="external" data-gtm-label="TEQSA PRV12080">PRV12080</a></li>
