fix: removed dash

--- a/packages/storybook-html/stories/components/footer/footer.html
+++ b/packages/storybook-html/stories/components/footer/footer.html
@@ -2,7 +2,7 @@
   <div  class="uq-acknowledgement uq-acknowledgement--large">
     <div class="uq-acknowledgement__content">
       <div class="uq-acknowledgement__text">
-        UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &ndash; <a href="https://about.uq.edu.au/reconciliation" class="uq-acknowledgement__link">Reconciliation at UQ</a>
+        UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. <a href="https://about.uq.edu.au/reconciliation" class="uq-acknowledgement__link">Reconciliation at UQ</a>
       </div>
     </div>
   </div>
