fix: Use SASS modules to resolve deprecation warnings (#648)
* fix: updated Grid Sass List.nth

* fix: Use SASS modules to resolve deprecation warnings

* fix: rebuilt icons

* fix: sass lightness and @use "sass:color";

* fix: Restore URL escaping from previous commit.

It was unclear what this escaping was for, but now it is apparently it is for
escaping `#` at the start of HTML colours.  Previously this was applied to the
whole string, however this change restores it only escape the incoming colour
values rather than the whole string.

* chore: Move icon SASS from JS into an .scss file, and use tsx instead of tsc.

This makes it easier to syntax check, and also allows running the TS code
directly, instead of having to build it first.  This makes the build process
much cleaner as it removes the TS transpilation step which sometimes would
cause old code to run after making changes.

* linting

* updated package-lock

* fix: Use SASS modules to resolve deprecation warnings

* fix: rebuilt icons

* fix: Restore URL escaping from previous commit.

It was unclear what this escaping was for, but now it is apparently it is for
escaping `#` at the start of HTML colours.  Previously this was applied to the
whole string, however this change restores it only escape the incoming colour
values rather than the whole string.

* chore: Move icon SASS from JS into an .scss file, and use tsx instead of tsc.

This makes it easier to syntax check, and also allows running the TS code
directly, instead of having to build it first.  This makes the build process
much cleaner as it removes the TS transpilation step which sometimes would
cause old code to run after making changes.

* updated package-lock

* fix: linter

* fix: Deprecation warning

* updated map.get

* fix: Sass deprecations fixes

* Update Sass deprecations

* updated style references

* fix: Use SASS modules to resolve deprecation warnings

* fix: rebuilt icons

* fix: Restore URL escaping from previous commit.

It was un

--- a/packages/core/src/scss/_component.scss
+++ b/packages/core/src/scss/_component.scss
@@ -1,16 +1,18 @@
-@import "_global";
+@forward "_global";
+@use "_partials/colour-constants";
+@use "_partials/text-constants";
 
 html {
   font-size: 100%; /* 16px in most browsers */
-  font-family: $font-body;
-  font-weight: $font-weight-normal;
-  line-height: $line-height;
-  color: $grey-900;
+  font-family: text-constants.$font-body;
+  font-weight: text-constants.$font-weight-normal;
+  line-height: text-constants.$line-height;
+  color: colour-constants.$grey-900;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 /* global setting for letter-spacing. implemented via wildcard to avoid form elements not inheriting the style */
 * {
-  letter-spacing: $letter-spacing;
+  letter-spacing: text-constants.$letter-spacing;
 }
