--- a/packages/app-maps/src/scss/_icons.scss
+++ b/packages/app-maps/src/scss/_icons.scss
@@ -1,3 +1,6 @@
+@use "sass:meta";
+@use "sass:string";
+@use "sass:map";
 $-icons: (
   "logo--uq-shield":
     "data:image/svg+xml,%3csvg viewBox='0 0 28 28' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M25 15.08c0 5.713-4.932 10.444-10.39 12.13l-.606.19s-.605-.19-.599-.187C7.308 25.336 3 20.166 3 15.06V2h21.998L25 15.08z' fill='white'/%3e%3cpath d='M9.08 13.788h.44c-.035-.132-.122-.23-.22-.23s-.184.097-.22.23zm.44.234h-.44c.032.133.122.235.22.235s.188-.106.22-.235zm-.44-2.208h.44c-.035-.133-.122-.23-.22-.23s-.184.097-.22.23zm.44.23h-.44c.032.132.122.23.22.23s.188-.098.22-.23zm5.787 3.11a1.268 1.268 0 00-.714.114c-.184.09-.386.142-.591.151a1.548 1.548 0 01-.597-.152 1.267 1.267 0 00-.71-.113h-2.152v-.902h-.867a.442.442 0 01-.372.23.504.504 0 01-.458-.463h-.13a.114.114 0 01-.118-.116c0-.065.053-.118.118-.118h.125a.505.505 0 01.46-.465.439.439 0 01.371.23h.866v-1.28h-.865a.445.445 0 01-.373.23.505.505 0 01-.459-.464h-.125a.118.118 0 01-.107-.178.12.12 0 01.107-.057h.125a.505.505 0 01.46-.464.436.436 0 01.371.23h.866v-.655l.468-.262v4.028h1.682c.306-.034.616.019.893.152.128.067.269.107.412.117a.977.977 0 00.412-.117c.277-.133.588-.187.893-.152h1.691v-3.96l.466.206v.655h1.13a.348.348 0 110 .694h-1.13v1.28h1.13a.348.348 0 110 .694h-1.13v.903h-2.148v.004zm1.216-.873h-1.216c-.369-.035-.74.03-1.074.187v-3.491c0-.344.356-.55.83-.55.698 0 1.075.226 1.46.152v3.702zm-2.757.172a2.068 2.068 0 00-1.07-.187H11.48v-3.7c.389.072.76-.154 1.46-.154.47 0 .83.208.83.551v3.489h-.004zm3.223 1.428c2.329.367 3.345 1.245 3.995 2.604V7.348c-.65 1.359-1.666 2.24-3.995 2.603.369-2.31 1.258-3.316 2.627-3.96H8.386v.004c1.369.643 2.26 1.65 2.628 3.96-2.33-.366-3.345-1.244-3.996-2.603h-.003v11.136h.004c.65-1.359 1.666-2.241 3.995-2.604-.369 2.31-1.26 3.317-2.627 3.961h11.23c-1.373-.647-2.26-1.655-2.628-3.965v.001zm5.972-.82c0 4.253-3.745 8.596-8.952 10.205-5.222-1.608-8.967-5.952-8.967-10.206V4.035h17.919V15.06zm.466 0V3.57H4.572v11.49c0 4.51 3.91 8.991 9.296 10.65l.137.043.137-.043c5.38-1.662 9.285-6.14 9.285-10.65z' fill='%2351247A'/%3e%3c/svg%3e",
@@ -26,12 +29,12 @@ $-icons: (
 );
 
 @function -str-replace($string, $search, $replace: "") {
-  $index: str-index($string, $search);
+  $index: string.index($string, $search);
 
   @if $index {
-    @return str-slice($string, 1, $index - 1) + $replace +
+    @return string.slice($string, 1, $index - 1) + $replace +
       -str-replace(
-        str-slice($string, $index + str-length($search)),
+        string.slice($string, $index + string.length($search)),
         $search,
         $replace
       );
@@ -41,13 +44,13 @@ $-icons: (
 }
 
 @function get-icon($icon, $color: #51247a) {
-  @if type-of($color) != "color" and $color != "none" {
+  @if meta.type-of($color) != "color" and $color != "none" {
     @warn "The requested color - \"" + $color + "\" - was not recognized as a Sass color value.";
     @return null;
   }
 
-  @if map-has-key($-icons, $icon) {
-    $icon: map-get($-icons, $icon);
+  @if map.has-key($-icons, $icon) {
+    $icon: map.get($-icons, $icon);
     $data-uri: -str-replace($icon, "~~COLOR~~", $color);
 
     @return -str-replace($data-uri, "#", "%23");
