--- a/packages/storybook-html/stories/components/header/header-interim.html
+++ b/packages/storybook-html/stories/components/header/header-interim.html
@@ -4,7 +4,7 @@
       <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle" data-gtm-action="Toggle">Menu</button>
     </div>
     <div class="uq-header__logo" data-gtm-category="Primary header">
-      <a class="logo--large" href="https://www.uq.edu.au" data-gtm-label="UQ Logo">
+      <a class="logo--large" href="https://uq.edu.au" data-gtm-label="UQ Logo">
         <img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg">
       </a>
     </div>        
@@ -97,7 +97,7 @@
             <a href="/admissions/doctor-medicine">Doctor of Medicine</a>
           </li>
           <li>
-            <a href="https://www.uq.edu.au/studyabroad/how-to-apply">Study abroad and incoming exchange</a>
+            <a href="https://uq.edu.au/studyabroad/how-to-apply">Study abroad and incoming exchange</a>
           </li>
         </ul>
       </li>
@@ -140,13 +140,13 @@
         <a class="uq-header__newglobal-nav-link" href="https://about.uq.edu.au">About</a>
       </li>
       <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
-        <a class="uq-header__nav-secondary-link" href="https://www.uq.edu.au">UQ home</a>
+        <a class="uq-header__nav-secondary-link" href="https://uq.edu.au">UQ home</a>
       </li>
       <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
-        <a class="uq-header__nav-secondary-link" href="https://www.uq.edu.au/news">News</a>
+        <a class="uq-header__nav-secondary-link" href="https://news.uq.edu.au">News</a>
       </li>
       <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
-        <a class="uq-header__nav-secondary-link" href="https://www.uq.edu.au/uq-events">Events</a>
+        <a class="uq-header__nav-secondary-link" href="https://uq.edu.au/uq-events">Events</a>
       </li>
       <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
         <a class="uq-header__nav-secondary-link" href="https://alumni.uq.edu.au/giving">Give</a>
@@ -183,13 +183,13 @@
     <nav class="uq-header__nav-secondary-container">
       <ul class="uq-header__nav-secondary-list">
           <li class="uq-header__nav-secondary-item">
-             <a href="https://www.uq.edu.au" rel="external" class="uq-header__nav-secondary-link">UQ home</a>
+             <a href="https://uq.edu.au" rel="external" class="uq-header__nav-secondary-link">UQ home</a>
           </li>
           <li class="uq-header__nav-secondary-item">
-              <a href="https://www.uq.edu.au/news" rel="external" class="uq-header__nav-secondary-link">News</a>
+              <a href="https://news.uq.edu.au" rel="external" class="uq-header__nav-secondary-link">News</a>
           </li>
           <li class="uq-header__nav-secondary-item">
-              <a href="https://www.uq.edu.au/uq-events" rel="external" class="uq-header__nav-secondary-link">Events</a>
+              <a href="https://uq.edu.au/uq-events" rel="external" class="uq-header__nav-secondary-link">Events</a>
           </li>
           <li class="uq-header__nav-secondary-item">
               <a href="https://alumni.uq.edu.au/giving" rel="external" class="uq-header__nav-secondary-link">Give</a>
