--- a/packages/storybook-html/stories/components/site-header/site-header-with-subnav.html
+++ b/packages/storybook-html/stories/components/site-header/site-header-with-subnav.html
@@ -83,7 +83,7 @@
                   <a href="/admissions/doctor-medicine">Doctor of Medicine</a>
                 </li>
                 <li class="uq-site-header__navigation__list-item">
-                  <a href="https://www.uq.edu.au/studyabroad/how-to-apply">Study abroad and incoming exchange</a>
+                  <a href="https://uq.edu.au/studyabroad/how-to-apply">Study abroad and incoming exchange</a>
                 </li>
               </ul>
             </li>
