--- a/packages/storybook-html/stories/components/footer/footer.html
+++ b/packages/storybook-html/stories/components/footer/footer.html
@@ -2,7 +2,7 @@
   <div  class="uq-acknowledgement uq-acknowledgement--large">
     <div class="uq-acknowledgement__content">
       <div class="uq-acknowledgement__text">
-        UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. <a href="https://about.uq.edu.au/reconciliation" class="uq-acknowledgement__link">Reconciliation at UQ</a>
+        UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. <a href="https://about.uq.edu.au/strategy-values/reconciliation" class="uq-acknowledgement__link">Reconciliation at UQ</a>
       </div>
     </div>
   </div>
@@ -13,27 +13,27 @@
           <h2 class="uq-footer__navigation-title">Media</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
+              <a href="https://news.uq.edu.au/contacts" class="uq-footer__navigation-link">Media team contacts</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
+              <a href="https://news.uq.edu.au" class="uq-footer__navigation-link">UQ news</a>
             </li>
           </ul>
         </li>
         <li class="uq-footer__navigation-item">
-          <h2 class="uq-footer__navigation-title">Working at UQ</h2>
+          <h2 class="uq-footer__navigation-title">Working with us</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers at UQ</a>
+              <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers and job search</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
+              <a href="https://about.uq.edu.au/strategy-values/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing" class="uq-footer__navigation-link">Staff support</a>
@@ -53,7 +53,7 @@
               <a href="https://programs-courses.uq.edu.au" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Key dates</a>
+              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Academic calendar</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
@@ -87,16 +87,16 @@
               <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">Contact UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/complaints-appeals" class="uq-footer__navigation-link">Make a complaint</a>
+              <a href="https://uq.edu.au/complaints-appeals" class="uq-footer__navigation-link">Make a complaint</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
+              <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find an expert</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
+              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Our campuses</a>
             </li>
           </ul>
         </li>
@@ -110,27 +110,27 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Media</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
+              <a href="https://news.uq.edu.au/contacts" class="uq-footer__navigation-link">Media team contacts</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
+              <a href="https://news.uq.edu.au" class="uq-footer__navigation-link">UQ news</a>
             </li>
           </ul>
         </li>
         <li class="uq-accordion__item uq-footer__navigation-item">
-          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Working at UQ</button>
+          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Working with us</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers at UQ</a>
+              <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers and job search</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
+              <a href="https://about.uq.edu.au/strategy-values/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing" class="uq-footer__navigation-link">Staff support</a>
@@ -150,7 +150,7 @@
               <a href="https://programs-courses.uq.edu.au" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Key dates</a>
+              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Academic calendar</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
@@ -187,13 +187,13 @@
               <a href="https://researchers.uq.edu.au" class="uq-footer__navigation-link">Find a researcher</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
+              <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find an expert</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
+              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Our campuses</a>
             </li>
           </ul>
         </li>
@@ -218,14 +218,14 @@
       <ul  class="uq-footer__footer-list">
         <li class="uq-footer__footer-item">&copy; The University of Queensland</li>
         <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: <a class="uq-footer__link" href="https://abr.business.gov.au/ABN/View?id=63942912684" rel="external" data-gtm-label="ABN">63 942 912 684</a></li>
-        <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr>: <a class="uq-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" data-gtm-label="CRICOS 00025B">00025B</a></li>
-        <li class="uq-footer__footer-item"><abbr title="Tertiary Education Quality and Standards Agency">TEQSA</abbr>: <a class="uq-footer__link" href="https://www.uq.edu.au/about/teqsa-link" rel="external" data-gtm-label="TEQSA PRV12080">PRV12080</a></li>
+        <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr>: <a class="uq-footer__link" href="https://about.uq.edu.au/cricos-link" rel="external" data-gtm-label="CRICOS 00025B">00025B</a></li>
+        <li class="uq-footer__footer-item"><abbr title="Tertiary Education Quality and Standards Agency">TEQSA</abbr>: <a class="uq-footer__link" href="https://about.uq.edu.au/teqsa-link" rel="external" data-gtm-label="TEQSA PRV12080">PRV12080</a></li>
       </ul>
     </nav>
     <nav class="uq-footer__footer" aria-label="Terms and conditions">
       <ul class="uq-footer__footer-list">
           <li class="uq-footer__footer-item">
-              <a href="https://www.uq.edu.au/legal/copyright-privacy-disclaimer/" class="uq-footer__link">Copyright, privacy and disclaimer</a>
+              <a href="https://uq.edu.au/legal/copyright-privacy-disclaimer" class="uq-footer__link">Copyright, privacy and disclaimer</a>
           </li>
           <li class="uq-footer__footer-item">
             <a href="https://uq.edu.au/accessibility" class="uq-footer__link">Accessibility</a>
