--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -236,7 +236,7 @@
               <li><a href="https://study.uq.edu.au/why-choose-uq" data-gtm-label="Study > Why choose UQ">Why choose UQ</a></li>
               <li><a href="https://study.uq.edu.au/enhance-your-employability" data-gtm-label="Study > Enhance your employability">Enhance your employability</a></li>
               <li><a href="https://study.uq.edu.au/university-life" data-gtm-label="Study > Life at UQ and accommodation">Life at UQ and accommodation</a></li>
-              <li><a href="https://campuses.uq.edu.au" data-gtm-label="Study > Our campuses">Our campuses</a></li>
+              <li><a href="https://campuses.uq.edu.au" data-gtm-label="Study > Campuses, maps and transport">Campuses, maps and transport</a></li>
               <li><a href="https://study.uq.edu.au/events" data-gtm-label="Study > Events for prospective students">Events for prospective students</a></li>
             </ul>
           </li>
@@ -348,7 +348,7 @@
               <li><a href="https://about.uq.edu.au/strategy-values" data-gtm-label="About > Strategy and values">Strategy and values</a></li>
               <li><a href="https://about.uq.edu.au/strategy-values/strategic-plan/domains/teaching-learning-student-experience" data-gtm-label="About > Learning, teaching and student experience">Learning, teaching and student experience</a></li>
               <li><a href="https://about.uq.edu.au/leadership-governance" data-gtm-label="About > Leadership and governance">Leadership and governance</a></li>
-              <li><a href="https://about.uq.edu.au/experts" data-gtm-label="About > Faculties, schools, centres and institutes">Faculties, schools, centres and institutes</a></li>
+              <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="About > Faculties, schools, centres and institutes">Faculties, schools, centres and institutes</a></li>
               <li><a href="https://campuses.uq.edu.au/information-and-services/security" data-gtm-label="About > Safety and security">Safety and security</a></li>
               <li><a href="https://about.uq.edu.au/experts" data-gtm-label="About > Find an expert">Find an expert</a></li>
               <li><a href="https://policies.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
